--- a/static/json/languages/en_US.json
+++ b/static/json/languages/en_US.json
@@ -1323,6 +1323,9 @@
       "send": "Send",
       "view_on_opensea": "View on OpenSea",
       "view_on_explorer": "View on %{explorerTitle}"
+    },
+    "toast": {
+      "spam_reported": "Your report has been received!"
     }
   },
   "points": {
